Make list authorized/public tokens both visible, and fix filtering
Fixes #737

--- a/less/components/lists.less
+++ b/less/components/lists.less
@@ -443,6 +443,7 @@
 
                 .icon {
                     flex-shrink: 0;
+                    margin-right: 0.2em;
 
                     &.authorized {
                         fill: @authorized-color;
